# lize

./: Cargo.toml  README.md  pyproject.toml  t.py
.github/workflows/: CI.yml
examples/: vs_bincode.rs
lize/: Cargo.toml  README.md
lize/examples/: vs_bincode.rs
lize/src/: lib.rs
lize_python/: Cargo.toml  pyproject.toml  t.py
lize_python/python/lize/: __init__.py  lize.pyi
lize_python/src/: lib.rs
python/lize/: __init__.py  lize.pyi
python/tests/: test_all.py
src/: lib.rs
