[package]
name = "lize_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lize"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["anyhow"] }
lize_sys = { package = "lize", path = "./lize" }
anyhow = "1.0.96"

[workspace]
members = ["lize"]
